tests/fixtures/invalid_semantic/invalid_required.syn
ITEM @ref2020
    code: A
END ITEM
